--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>🌿 Kontrol Pompa Irigasi - ESP32 LoRa</title>
+  <title>🌿Relay+Pompa_Web IoT Dashboard</title>
 
   <!-- Firebase Modular SDK -->
   <script type="module">
@@ -141,7 +141,7 @@
 </head>
 
 <body>
-  <h2>🌿 Kontrol Pompa Irigasi - ESP32 LoRa</h2>
+  <h2>🌿Relay+Pompa_Web IoT Dashboard</h2>
 
   <!-- Login -->
   <div id="login">
@@ -153,7 +153,7 @@
 
   <!-- Dashboard -->
   <div id="dashboard" style="display:none;">
-    <h3>Kontrol Manual Pompa</h3>
+    <h3>____________________</h3>
 
     <div class="button-group">
       <button id="onBtn">Pompa ON</button>
@@ -168,3 +168,4 @@
   </div>
 </body>
 </html>
+
