--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>🌿 Relay + Pompa | IoT Dashboard</title>
+  <title>🔧Relay + Pompa💧| Web IoT Dashboard</title>
 
   <!-- Firebase Modular SDK -->
   <script type="module">
@@ -143,7 +143,7 @@
 </head>
 
 <body>
-  <h2>🌿 Relay + Pompa | IoT Dashboard</h2>
+  <h2>🔧Relay + Pompa 💧|Web IoT Dashboard</h2>
 
   <!-- 🔐 Login -->
   <div id="login">
@@ -167,3 +167,4 @@
   </div>
 </body>
 </html>
+
